Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65715

Incorrect page margins when printing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.10
    • 5.10.0, 5.9
    • WebEngine
    • None

      Found on stackoverflow: https://stackoverflow.com/questions/47900417/qt-webengine-incorrect-page-margins-when-printing

      1.) WebEngine picks up the page layout from the provided QPrinter
      2.) PDFium renders the page to a temporary PDF with these margins
      3.) then passes it back to the API layer
      4.) and there QPrinter applies its margins one more time when printing the page.

        For Gerrit Dashboard: QTBUG-65715
        # Subject Branch Project Status CR V

            davidsz Szabolcs David
            davidsz Szabolcs David
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes